css/style.css
body {
    background-color: #F7F7F7;
    font-family: Verdana, Geneva, Tahoma, sans-serif;
}

#btns {
    display: flex;
    flex-direction: row;
    justify-content: center;
    text-align: center;
}

#slideWrapper {
    margin: 1rem;
    position: relative;
    overflow: hidden;
}

/* container of .team */
#teamSlideWheel {
    height: 100px;
    width: 100%;
    max-width: 100%;
    display: flex;
    list-style: none;
    margin: auto;
    padding: 5px;
    overflow: hidden;
    scroll-behavior: smooth;
    box-shadow: inset 0px 0px 5px lightgrey;
    box-shadow: outset 0px 0px 10px lightgrey;
}

#select-team {
    text-align: center;
    font-size: 2em;
}

#select-team select {
    font-size: 1em;
}

#resultsShowing {
    width: 100%;
    max-width: 100%;
    text-align: left;
    margin: 1em;
    color: grey;
}

/* container of .news-card */
#news-container {
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    text-align: center;
    margin: auto;
    width: 75vw;
    justify-content: center;
    /*border: 2px solid blue;*/
}

.news-card {
    background-color: white;
    border-radius: 1em;
    width: 100%;
    max-width: 100%;
    padding: 1em;
    margin: 5px;
    box-shadow: 0px 5px 10px lightgrey;
}

.news-card-thumbnail {
    width: 100%;
    height: auto;
}

.select-team {
    display: flex;
    text-align: center;
    justify-content: center;
}

.team {
    width: 100%;
    max-width: 100px;
    height: 100%;
    max-height: 100px;
    flex: 1 0 100%;
    transition: 0.2s;
    /*border: 2px solid blue;*/
}

.team:hover {
    transform: scale(1.3);
}

.team:active{
    transform: scale(1.1);
}

.btn {
    width: 6em;
    height: 3em;
}

.btn-prev {

}

.btn-next {

}

.team-logo {
    width: 100px;
    height: 100px;
}


/* Medium devices (landscape tablets, 768px and up) */
@media only screen and (min-width: 768px) {
    .news-card {
        max-width: 45%;
    }
}

/* Large devices (laptops/desktops, 992px and up) */
@media only screen and (min-width: 992px) {
    .news-card {
        max-width: 25%;
    }
}

/* Extra large devices (large laptops and desktops, 1200px and up) */
@media only screen and (min-width: 1200px) {
    .news-card {
        max-width: 25%;
    }
}

